// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              aria-label="Dollars"
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              type="text"
              value="$1,893,385"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jwXOFh sc-bdfBwQ ipzXGW"
              disabled=""
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 krGlGD"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ hvvxbw"
              type="text"
              value="$10"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 nnMiQ sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 nnMiQ sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              placeholder="US phone number with country code"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  9`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 nnMiQ sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  10`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              placeholder="K1A 0B2"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  11`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  12`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  13`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  14`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              placeholder="Enter phone..."
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput  15`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ egNCwu"
              id="date-id"
              name="date-name"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
